# ftd-tfidf-we

./: README.md  articles.txt  database-schema.sql  docker-compose.yml  pyproject.toml  test.py  tweets.sql
assets/: database-schema.sql  tfidfs.json  tweets-backup
assets/articles/: article-analysis-of-the-effectiveness-of-face-coverings-on-the-death-ratio-of-covid-19-using-machine-learning.json  article-efficacy-of-masks-and-face-coverings-in-controlling-outward-aerosol-particle-emission-from-expiratory-activities.json  article-new-insights-into-the-standard-method-of-assessing-bacterial-filtration-efficiency-of-medical-face-masks.json  article-respiratory-virus-shedding-in-exhaled-breath-and-efficacy-of-face-masks.json
assets/json/: article_full_section.json  article_root_words.json  tweet_full.json  tweet_root_words.json
files/articles/: article-a-life-cycle-assessment-of-reprocessing-face-masks-during-the-covid-19-pandemic.json  article-analysis-of-the-effectiveness-of-face-coverings-on-the-death-ratio-of-covid-19-using-machine-learning.json  article-efficacy-of-masks-and-face-coverings-in-controlling-outward-aerosol-particle-emission-from-expiratory-activities.json  article-new-insights-into-the-standard-method-of-assessing-bacterial-filtration-efficiency-of-medical-face-masks.json  article-respiratory-virus-shedding-in-exhaled-breath-and-efficacy-of-face-masks.json
src/: articles.py  common.py  main.py  tweets.py  util.py
src/article/: ArticleScraper.py
src/article-service/: ArticleService.py
src/articleservice/: ArticleService.py
src/db/: PostgresManager.py
src/scraper/: NatureSpider.py  (+1 more)
(+7 files in other folders)
