[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Gustavo Moser <gustavovbmoser@gmail.com>"]
packages = [
    { include = "articleservice", from = "src" },
    { include = "db", from = "src" },
    { include = "service", from = "src" },
    { include = "twitterservice", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.10.1"
Scrapy = "^2.6.2"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.scripts]
save_articles = "src.articles:saveArticles"
save_tweets = "src.tweets:saveTweets"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
